--- a/web/index.html
+++ b/web/index.html
@@ -8,8 +8,14 @@
 <body>
 
     <div class="tracker">
-        <img src="img/kettlebell.jpg" alt="" class="tracker__kettlebell">
+        <div class="tracker__frame">
+            <img src="img/kettlebell.jpg" alt="" class="tracker__frame__kettlebell">
+            <div class="tracker__frame__clock">
+                <span class="tracker__frame__clock__timer">
+                    00:00
+                </span>
+            </div>
+        </div>
     </div>
-
 </body>
 </html>
