timer starts on click and goes up to 60s

--- a/web/index.html
+++ b/web/index.html
@@ -11,8 +11,8 @@
         <div class="tracker__frame">
             <img src="img/kettlebell.jpg" alt="" class="tracker__frame__kettlebell">
             <div class="tracker__frame__clock">
-                <span class="tracker__frame__clock__timer">
-                    00:00
+                <span id="timer" class="tracker__frame__clock__timer" onclick="startTimer()">
+                    0
                 </span>
             </div>
         </div>
