hover highlighting and clicking to start and pause

--- a/web/index.html
+++ b/web/index.html
@@ -9,12 +9,10 @@
 
     <div class="tracker">
         <div class="tracker__frame">
-            <img src="img/kettlebell.jpg" alt="" class="tracker__frame__kettlebell">
-            <div class="tracker__frame__clock">
-                <span id="timer" class="tracker__frame__clock__timer" onclick="startTimer()">
-                    0
-                </span>
-            </div>
+            <div class="tracker__frame__clock" onclick="startTimer()"></div>
+            <span id="timer" class="tracker__frame__clock__timer">
+                00
+            </span>
         </div>
     </div>
 </body>
