stack card templates

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
+    <section class="card-stack">
+        <ul class="cards">
+            <li class="card">Test</li>
+            <li class="card">Test</li>
+            <li class="card">Test</li>
+            <li class="card">Test</li>
+            <li class="card">Test</li>
+        </ul>
+    </section>
     <div class="tracker">
         <div class="tracker__card">
             <form action="" class="tracker__card__exercise-details">
