add content to stacked cards

--- a/web/index.html
+++ b/web/index.html
@@ -8,11 +8,56 @@
 <body>
     <section class="card-stack">
         <ul class="cards">
-            <li class="card">Test</li>
-            <li class="card">Test</li>
-            <li class="card">Test</li>
-            <li class="card">Test</li>
-            <li class="card">Test</li>
+            <li class="card">
+                <form action="" class="card-details">
+                        <label for="exercise-name">Exercise</label><br>
+                        <input type="text" id="exercise-name" name="exercise-name" value=""><br>
+                        <label for="exercise-weight">Weight</label><br>
+                        <input type="text" id="exercise-weight" name="exercise-weight" value=""><br>
+                        <label for="exercise-reps">Reps</label><br>
+                        <input type="text" id="exercise-reps" name="exercise-reps" value=""><br><br>
+                  </form> 
+            </li>
+            <li class="card">
+                                <form action="" class="card-details">
+                        <label for="exercise-name">Exercise</label><br>
+                        <input type="text" id="exercise-name" name="exercise-name" value=""><br>
+                        <label for="exercise-weight">Weight</label><br>
+                        <input type="text" id="exercise-weight" name="exercise-weight" value=""><br>
+                        <label for="exercise-reps">Reps</label><br>
+                        <input type="text" id="exercise-reps" name="exercise-reps" value=""><br><br>
+                  </form> 
+            </li>
+            <li class="card">
+                                <form action="" class="card-details">
+                        <label for="exercise-name">Exercise</label><br>
+                        <input type="text" id="exercise-name" name="exercise-name" value=""><br>
+                        <label for="exercise-weight">Weight</label><br>
+                        <input type="text" id="exercise-weight" name="exercise-weight" value=""><br>
+                        <label for="exercise-reps">Reps</label><br>
+                        <input type="text" id="exercise-reps" name="exercise-reps" value=""><br><br>
+                  </form> 
+            </li>
+            <li class="card">
+                                <form action="" class="card-details">
+                        <label for="exercise-name">Exercise</label><br>
+                        <input type="text" id="exercise-name" name="exercise-name" value=""><br>
+                        <label for="exercise-weight">Weight</label><br>
+                        <input type="text" id="exercise-weight" name="exercise-weight" value=""><br>
+                        <label for="exercise-reps">Reps</label><br>
+                        <input type="text" id="exercise-reps" name="exercise-reps" value=""><br><br>
+                  </form> 
+            </li>
+            <li class="card">
+                                <form action="" class="card-details">
+                        <label for="exercise-name">Exercise</label><br>
+                        <input type="text" id="exercise-name" name="exercise-name" value=""><br>
+                        <label for="exercise-weight">Weight</label><br>
+                        <input type="text" id="exercise-weight" name="exercise-weight" value=""><br>
+                        <label for="exercise-reps">Reps</label><br>
+                        <input type="text" id="exercise-reps" name="exercise-reps" value=""><br><br>
+                  </form> 
+            </li>
         </ul>
     </section>
     <div class="tracker">
