add input field to bar

--- a/web/index.html
+++ b/web/index.html
@@ -12,6 +12,7 @@
             </li>
         </ul>
         <div class="bar">
+            <input type="text" class="wt">
             <a href="#" class="float-add" onclick="addHit()">+</a>
         </div>
     </section>
