add historical cards to side panel

--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
     </section>
 
     <aside class="column side-bar-log">
-        <ul>
+        <ul class="past-cards">
             <li>Bench</li>
             <li>Bench</li>
             <li>Bench</li>
